@@ -41,6 +41,14 @@ class TestConsole(object):
         TestConsole._expect_prompt(child)
         TestConsole._close(child)
 
+    def test_just_dash_i_with_equals(self):
+        child = pexpect.spawn(TestConsole.gremlinsh + "-i=x.script")
+        TestConsole._expect_gremlin_header(child)
+        TestConsole._send(child, "x")
+        child.expect("==>2\r\n")
+        TestConsole._expect_prompt(child)
+        TestConsole._close(child)
+
     def test_just_dash_dash_interactive(self):
         child = pexpect.spawn(TestConsole.gremlinsh + "--interactive x.script")
         TestConsole._expect_gremlin_header(child)
@@ -65,8 +73,16 @@ class TestConsole(object):
         TestConsole._expect_prompt(child)
         TestConsole._close(child)
 
+    def test_dash_dash_interactive_with_args_and_equals(self):
+        child = pexpect.spawn(TestConsole.gremlinsh + "--interactive=\"y.script 1 2 3\"")
+        TestConsole._expect_gremlin_header(child)
+        TestConsole._send(child, "y")
+        child.expect("==>6\r\n")
+        TestConsole._expect_prompt(child)
+        TestConsole._close(child)
+
     def test_dash_i_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "-i y.script 1 2 3 -i x.script -i \"z.script x -i --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "-i y.script 1 2 3 -i x.script -i \"z.script x -i = --color -D\"")
         TestConsole._expect_gremlin_header(child)
         TestConsole._send(child, "y")
         child.expect("==>6\r\n")
@@ -75,12 +91,12 @@ class TestConsole(object):
         child.expect("==>2\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._send(child, "z")
-        child.expect("==>argument=\[x, -i, --color, -D\]\r\n")
+        child.expect("==>argument=\[x, -i, =, --color, -D\]\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._close(child)
 
     def test_dash_dash_interactive_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "--interactive y.script 1 2 3 --interactive x.script -i \"z.script x -i --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "--interactive y.script 1 2 3 --interactive x.script -i \"z.script x -i = --color -D\"")
         TestConsole._expect_gremlin_header(child)
         TestConsole._send(child, "y")
         child.expect("==>6\r\n")
@@ -89,12 +105,12 @@ class TestConsole(object):
         child.expect("==>2\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._send(child, "z")
-        child.expect("==>argument=\[x, -i, --color, -D\]\r\n")
+        child.expect("==>argument=\[x, -i, =, --color, -D\]\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._close(child)
 
     def test_mixed_interactive_long_short_opts_with_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "--interactive y.script 1 2 3 --interactive x.script -i \"z.script x -i --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "--interactive y.script 1 2 3 --interactive x.script -i \"z.script x -i = --color -D\"")
         TestConsole._expect_gremlin_header(child)
         TestConsole._send(child, "y")
         child.expect("==>6\r\n")
@@ -103,7 +119,7 @@ class TestConsole(object):
         child.expect("==>2\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._send(child, "z")
-        child.expect("==>argument=\[x, -i, --color, -D\]\r\n")
+        child.expect("==>argument=\[x, -i, =, --color, -D\]\r\n")
         TestConsole._expect_prompt(child)
         TestConsole._close(child)
 
@@ -128,24 +144,24 @@ class TestConsole(object):
         TestConsole._close(child)
 
     def test_dash_e_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "-e y-printed.script 1 2 3 -e x-printed.script -e \"z-printed.script x -e --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "-e y-printed.script 1 2 3 -e x-printed.script -e \"z-printed.script x -e = --color -D\"")
         child.expect("6\r\n")
         child.expect("2\r\n")
-        child.expect("argument=\[x, -e, --color, -D\]\r\n")
+        child.expect("argument=\[x, -e, =, --color, -D\]\r\n")
         TestConsole._close(child)
 
     def test_dash_dash_execute_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "--execute y-printed.script 1 2 3 --execute x-printed.script --execute \"z-printed.script x -e --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "--execute y-printed.script 1 2 3 --execute x-printed.script --execute \"z-printed.script x -e = --color -D\"")
         child.expect("6\r\n")
         child.expect("2\r\n")
-        child.expect("argument=\[x, -e, --color, -D\]\r\n")
+        child.expect("argument=\[x, -e, =, --color, -D\]\r\n")
         TestConsole._close(child)
 
     def test_mixed_execute_long_short_opts_with_multiple_scripts(self):
-        child = pexpect.spawn(TestConsole.gremlinsh + "--execute y-printed.script 1 2 3 -e x-printed.script --execute \"z-printed.script x -e --color -D\"")
+        child = pexpect.spawn(TestConsole.gremlinsh + "--execute y-printed.script 1 2 3 -e x-printed.script --execute \"z-printed.script x -e = --color -D\"")
         child.expect("6\r\n")
         child.expect("2\r\n")
-        child.expect("argument=\[x, -e, --color, -D\]\r\n")
+        child.expect("argument=\[x, -e, =, --color, -D\]\r\n")
         TestConsole._close(child)
 
     def test_no_mix_dash_i_and_dash_e(self):
